  will be placed in the directory containing the executable. When the emulator is started, the old directories
  will be automatically moved to the new location. In order to open the configuration directory easily, it's always
  possible to do so via the menu items "File->Open working directory" [Windows and UNIX-Like] or
  "File->Open config directory" [UNIX-Like].
- Updated internal shaders.
- Improved FDS sound emulation.
- Fixed autoswitch timing for FDS.
- Fixed decimal mode support.
- Rewritten mapper : 30, 45, 49, 52, 57, 62, 74, 91, 108, 114, 116, 132, 134, 136, 147, 150, 162, 163, 164, 172,
  173, 176, 185, 191, 192, 194, 195, 197, 217, 221, 227, 242, 243
- Added support to mapper : 6, 8, 17, 14, 29, 55, 59, 63, 81, 101, 103, 104, 106, 111, 125, 126, 179, 198, 207,
  218, 224, 236, 237, 238, 248, 255, 256, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 271, 274,
  281, 282, 283, 284, 285, 286, 287, 288, 289, 290, 292, 295, 297, 298, 299, 300, 301, 302, 303, 304, 305, 306,
  307, 308, 309, 312, 313, 314, 315, 319, 320, 322, 323, 324, 325, 327, 328, 329, 331, 332, 333, 335, 336, 337,
  338, 339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351, 352, 353, 355, 356, 357, 358, 359, 360,
  361, 368, 369, 370, 372, 374, 375, 377, 380, 381, 382, 386, 387, 388, 389, 390, 393, 394, 395, 396, 397, 398,
  399, 400, 401, 403, 404, 406, 409, 410, 411, 412, 413, 414, 415, 416, 417, 420, 422, 428, 429, 431, 432, 433,
  434, 436, 437, 438, 442, 447, 451, 452, 455, 456, 457, 512, 513, 516, 518, 519, 521, 522, 524, 525, 526, 527,
  528, 529, 530, 532, 534, 536, 537, 538, 539, 540, 541, 543, 547, 550, 554, 556, 557, 558, 559, 560
- Added support to UNIF mapper : 10-24-C-A1, 11160, 12-IN-1, 158B, 190in1, 22026, 3D-BLOCK, 411120C, 603-5052,
  60311C, 64in1NOrRepeat, 70in1, 70in1B, 8-IN-1, 80013-B, 810544-C-A1, 8157, 82112C, 830118C, 830134C,
  830425C-4391T, 831128C, 891227, 900218, A65AS, AX-40G, AX5705, BJ-56, BS-400R, BS-4040R, BS-5, CHINA_ER_SAN2,