@@ -693,6 +693,7 @@ target_compile_definitions(punes
 	$<$<BOOL:${ENABLE_GIT_INFO}>:WITH_GIT_INFO>
 	$<$<BOOL:${ENABLE_RELEASE}>:RELEASE>
 	$<$<BOOL:${ENABLE_FFMPEG}>:WITH_FFMPEG>
+	$<$<BOOL:${DISABLE_PORTABLE_MODE}>:WITHOUT_PORTABLE_MODE>
 	$<IF:$<BOOL:${ENABLE_OPENGL}>,
 		GLEW_STATIC
 		WITH_OPENGL,
